--- a/models/staging/airbnb/airbnb_sources.yml
+++ b/models/staging/airbnb/airbnb_sources.yml
@@ -3,6 +3,8 @@ version: 2
 sources:
   - name: airbnb
     schema: airbnb
+    catalog: hive_metastore
+
     tables:
       - name: calendar
         description: Availability calendar for listings
