--- a/models/staging/tpch/tpch_sources.yml
+++ b/models/staging/tpch/tpch_sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: tpch
     schema: tpch
-    
+    catalog: hive_metastore
     tables:
       - name: orders
         description: main order tracking table
