--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -51,5 +51,5 @@ models:
         intermediate:
           +schema: silver
           python:
-            +cluster_id: 1221-222827-ofavylyp
+            +cluster_id: "{{ env_var('DBT_PYTHON_CLUSTER_ID') }}" #1221-222827-ofavylyp
             +submission_method: all_purpose_cluster
