Commenting out python cluster in dbt_project.yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -50,6 +50,6 @@ models:
         +schema: gold
         intermediate:
           +schema: silver
-          python:
-            +cluster_id: "{{ env_var('DBT_PYTHON_CLUSTER_ID') }}" #1221-222827-ofavylyp
-            +submission_method: all_purpose_cluster
+          #python:
+            #+cluster_id: "{{ env_var('DBT_PYTHON_CLUSTER_ID') }}" #1221-222827-ofavylyp
+            #+submission_method: all_purpose_cluster
