--- a/models/marts/core/core.yml
+++ b/models/marts/core/core.yml
@@ -2,14 +2,38 @@ version: 2
 
 models:
   - name: dim_customers
+    access: public
+    config:
+      contract:
+        enforced: true
     description: Customer dimensions table
     columns:
       - name: customer_key
+        data_type: bigint
+        constraints:
+          - type: not_null 
+          - type: primary_key
         description: Primary key on the customers table
         tests:
           - unique
           - not_null
-                
+      - name: name
+        data_type: string
+        constraints:
+          - type: not_null
+      - name: address
+        data_type: string
+      - name: nation
+        data_type: string
+      - name: region
+        data_type: string
+      - name: phone_number
+        data_type: string
+      - name: account_balance
+        data_type: decimal
+      - name: market_segment
+        data_type: string
+
   - name: dim_parts
     columns:
       - name: part_key
