making change to dbt_project.yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,12 +1,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'databricks_demo'
-version: '1.0.0'
+name: "databricks_demo"
+version: "1.0.0"
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: "default"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,14 +18,14 @@ seed-paths: ["data"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
-    - "target"
-    - "dbt_modules"
+target-path: "target" # directory which will store compiled SQL files
+clean-targets: # directories to be removed by `dbt clean`
+  - "target"
+  - "dbt_modules"
 
 dispatch:
   - macro_namespace: dbt_utils
-    search_order: ['spark_utils', 'dbt_utils']
+    search_order: ["spark_utils", "dbt_utils"]
 
 quoting:
   database: false
@@ -43,21 +43,20 @@ models:
   #incremental_strategy: merge  # with dbt-databricks adapter this is now the default
 
   databricks_demo:
-      +file_format: delta # or hudi
-      # Applies to all files under models/example/
-      util:
-        +materialized: view  
-        +schema: util
-      staging:
-        +materialized: table
-        +schema: bronze
-      marts:
-        +materialized: table
-        +schema: gold
-        intermediate:
-          +schema: silver
+    +file_format: delta # or hudi
+    # Applies to all files under models/example/
+    util:
+      +materialized: view
+      +schema: util
+    staging:
+      +materialized: table
+      +schema: bronze
+    marts:
+      +materialized: table
+      +schema: gold
+      intermediate:
+        +schema: silver
       ml:
-        +cluster_id: "{{ env_var('DBT_DATABRICKS_CLUSTER_ID') }}"
+        +cluster_id: "{{ env_var('DBT_PYTHON_CLUSTER_ID') }}"
         +submission_method: all_purpose_cluster
-        # Disabled until https://github.com/databricks/dbt-databricks/issues/232 is resolved
-        +enabled: true
+        +enabled: false
